; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_parser.c_pop_state.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_parser.c_pop_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parser = type { i64, i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.parser*)* @pop_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pop_state(%struct.parser* %0) #0 {
  %2 = alloca %struct.parser*, align 8
  store %struct.parser* %0, %struct.parser** %2, align 8
  %3 = load %struct.parser*, %struct.parser** %2, align 8
  %4 = getelementptr inbounds %struct.parser, %struct.parser* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = call i32 @ASSERT(i64 %5)
  %7 = load %struct.parser*, %struct.parser** %2, align 8
  %8 = getelementptr inbounds %struct.parser, %struct.parser* %7, i32 0, i32 1
  %9 = load i32*, i32** %8, align 8
  %10 = load %struct.parser*, %struct.parser** %2, align 8
  %11 = getelementptr inbounds %struct.parser, %struct.parser* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = add i64 %12, -1
  store i64 %13, i64* %11, align 8
  %14 = getelementptr inbounds i32, i32* %9, i64 %13
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.parser*, %struct.parser** %2, align 8
  %17 = getelementptr inbounds %struct.parser, %struct.parser* %16, i32 0, i32 2
  store i32 %15, i32* %17, align 8
  ret void
}

declare dso_local i32 @ASSERT(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
